# linalg

./: README.md  plotting.ipynb  pyproject.toml  requirements.txt  statsmodels.ipynb  weighted_least_squares.ipynb
data/: A_matrix.pickle  affine_A_matrix.csv  affine_A_matrix.pickle  b_vector.csv  b_vector.pickle  coordinates.csv  coordinates.pickle  covariance_series.pickle  ground_control_points.csv  params.pickle  similarity_A_matrix.csv  similarity_A_matrix.pickle  weight_matrix.pickle  weights.csv  year_distance.csv  year_distance.pickle
notebooks/: ordinary_least_squares.ipynb  weighted_least_squares.ipynb
